  [-] In private chats history of communication are loaded even if the relevant setting has been disabled
  [-] When changing the nickname in the conference the nickname was not changed in the active conferences menu in the roster window
  [-] When requesting delivery of unread messages via RemoteControl in the message list fell messages from conferences and received on a different account

v1.2.0
------
  [!] Added new plugin for notifications about birthdays
  [!] Added new plugin for loading data from custom types of URLs
  [!] Added new plugin for exchanging roster contacts
  [+] Added ability to show a minimized window with the message when notification received
  [+] Added date separators in chat windows and conferences
  [+] Added ability to remove transpots with their contacts from roster
  [*] Notice of user activity in the chat duplicated on the chat tab
  [*] Added new types of notifications and changed the way of their settings
  [*] Added context menu for tabs in tabwindow
  [*] Search for contact-list starts automatically, just start typing the word
  [*] Added ability to rename contacts and groups directly in the contact list
  [*] Added ability to execute operations on multiple items in roster
  [*] Notification of request for authorization is now deleted automatically in case of confirmation or removal of authorization from another resource
  [*] Added support for transferring files via SOCKS5 in conferences
  [*] Added animation support in SimpleMessageStyles and notification pop-ups
  [*] Added ability to specify environment variables in the resource
  [*] Improved and optimized work with message archive
  [-] XML parser did not correctly handle the elements with not declared prefixes, which caused to the breaking the connection
  [-] Fixed bug in Digest-MD5 authorization for which was not possible to log on some servers
  [-] When leaving the hidden conferences also closed the conference on non-active tabs